updated standard scaler

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+#conda create -p myvenv python==3.10
+#### pip install -r requirements.txt
 numpy
 pandas
 seaborn
 matplotlib
+fastapi 
+uvicorn 
+sklearn
